tests/frontend/fail/array/inconsistent_array_type.act
constructor of B
interface constructor()

creates

  bool[3] b := [1, 2, false]
